# Boxing_Tracking_Project

./: .dockerignore  .gitignore  README.md  README_REID_TRAINING.md  README_RUNTIME.md  project_core_contents.txt  pyproject.toml  requirements-reid.txt  requirements.txt
configs/: birth_manager.yaml  infer_tracks.docker.yaml  infer_tracks.yaml  shot_boundary.yaml  tracking.yaml  train_apperance_cnn.yaml  train_pose_mpl.yaml
docker/: Dockerfile.runtime  Dockerfile.runtime.dockerignore  constraints.txt
docker/scripts/: build-runtime.sh  run-runtime.sh  test-runtime.sh
docs/: results_usage.md
requirements/: inference.txt
scripts/: export_reid_onnx.py  infer_tracks.py  train_apperance_cnn.py  train_pose_mpl.py  train_reid_osnet_siamese.py
src/boxing_project/apperance_embedding/: __init__.py  cnn_model.py  dataset.py  inference.py  losses.py  preprocessing.py
src/boxing_project/kalman_filter/: kalman.py
src/boxing_project/pose_embeding/: dataset.py  inference.py  losses.py  mpl_model.py  normalization.py
src/boxing_project/reid_training/: losses.py  pairs_dataset.py  preprocessing.py  siamese_model.py  stage_trainer.py
src/boxing_project/results/: __init__.py  dataset.py  errors.py  observation.py  schema.py  segment.py  selection.py  utils.py
src/boxing_project/shot_boundary/: __init__.py  inference.py
src/boxing_project/shout_boundary/: detector.py  ssim_detector.py
src/boxing_project/tracking/: __init__.py  birth_manager.py  birth_update_pipeline.py  frame_processing.py  global_clustering.py  image_utils.py  infer_runner.py  inference_utils.py  (+13 more)
(+2 files in other folders)
